TP5/obj/TP5.output
Terminals unused in grammar

   NOIGUAL
   IGUALIGUAL


Rules useless in parser due to conflicts

   25 sentenciaSeleccion: error

   28 sentenciaEtiquetada: error

   35 sentenciaIteracion: error

   63 sentenciaCompuesta: error

   67 listaDeSentencias: error

   73 sentenciaExpresion: error

   82 expresionDeAsignacion: error

   91 listaDeExpresionesInvocacion: error

   94 listaDeExpresiones: error

  117 expresion: error


Estado 3 conflictos: 36 reducción(ones)/reducción(ones)
Estado 41 conflictos: 13 desplazamiento(s)/reducción(ones)
Estado 61 conflictos: 38 reducción(ones)/reducción(ones)
Estado 66 conflictos: 15 reducción(ones)/reducción(ones)
Estado 74 conflictos: 36 reducción(ones)/reducción(ones)
Estado 75 conflictos: 1 reducción(ones)/reducción(ones)
Estado 93 conflictos: 15 reducción(ones)/reducción(ones)
Estado 95 conflictos: 27 reducción(ones)/reducción(ones)
Estado 140 conflictos: 14 reducción(ones)/reducción(ones)
Estado 150 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 159 conflictos: 1 reducción(ones)/reducción(ones)
Estado 178 conflictos: 27 reducción(ones)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input sentencia
    3      | input error

    4 numero: NUM
    5       | REAL

    6 sentencia: sentenciaDeclaracion
    7          | sentenciaCompuesta
    8          | sentenciaExpresion
    9          | sentenciaIteracion
   10          | sentenciaEtiquetada
   11          | sentenciaSeleccion
   12          | sentenciaRetorno
   13          | sentenciaSalto
   14          | ';'

   15 sentenciaSalto: BREAK ';'
   16               | CONTINUE ';'

   17 $@1: /* vacío */

   18 sentenciaDeclaracion: TIPO_DATO $@1 parteFinalDeclaracion

   19 $@2: /* vacío */

   20 sentenciaDeclaracion: TOKEN_VOID $@2 sentenciaFuncion
   21                     | error

   22 sentenciaSeleccion: IF '(' expresion ')' sentencia
   23                   | IF '(' expresion ')' sentencia ELSE sentencia
   24                   | SWITCH '(' expresion ')' sentencia
   25                   | error

   26 sentenciaEtiquetada: CASE constante ':' sentencia
   27                    | DEFAULT ':' sentencia
   28                    | error

   29 sentenciaRetorno: RETURN expresion ';'

   30 constante: numero
   31          | CCHAR

   32 sentenciaIteracion: FOR '(' primeraExpresionFor ';' expresionOpcional ';' expresionOpcional ')' sentencia
   33                   | WHILE '(' expresion ')' sentencia
   34                   | DO sentencia WHILE '(' expresion ')' ';'
   35                   | error

   36 primeraExpresionFor: expresion

   37 $@3: /* vacío */

   38 primeraExpresionFor: TIPO_DATO ID $@3 '=' expresion
   39                    | /* vacío */

   40 expresionOpcional: expresion
   41                  | /* vacío */

   42 parteFinalDeclaracion: declaraId ';'

   43 $@4: /* vacío */

   44 parteFinalDeclaracion: declaraId ',' $@4 listaIdentificadores
   45                      | sentenciaFuncion
   46                      | error

   47 $@5: /* vacío */

   48 sentenciaFuncion: ID $@5 '(' listaDeParametros ')' declaracionODefFuncion
   49                 | error

   50 declaracionODefFuncion: ';'
   51                       | sentenciaCompuesta
   52                       | error

   53 $@6: /* vacío */

   54 listaIdentificadores: declaraId ',' $@6 listaIdentificadores
   55                     | declaraId ';'
   56                     | error

   57 listaDeParametros: /* vacío */

   58 $@7: /* vacío */

   59 listaDeParametros: TIPO_DATO ID $@7 ',' listaDeParametros
   60                  | TIPO_DATO ID
   61                  | error

   62 sentenciaCompuesta: '{' listaDeSentencias '}'
   63                   | error

   64 listaDeSentencias: sentencia listaDeSentencias
   65                  | sentencia
   66                  | /* vacío */
   67                  | error

   68 opAsignacion: MENOSIGUAL
   69             | MASIGUAL
   70             | PORIGUAL
   71             | DIVIDIDOIGUAL

   72 sentenciaExpresion: listaDeExpresiones ';'
   73                   | error

   74 $@8: /* vacío */

   75 invocacionFuncion: ID $@8 segundaParteInvocacion
   76                  | error

   77 $@9: /* vacío */

   78 segundaParteInvocacion: $@9 '(' conOSinParametros ')'

   79 conOSinParametros: listaDeExpresionesInvocacion
   80                  | /* vacío */

   81 expresionDeAsignacion: ID opAsignacionGeneral listaDeExpresiones
   82                      | error

   83 opAsignacionGeneral: '='
   84                    | opAsignacion

   85 declaraId: ID
   86          | ID '=' expresion
   87          | error

   88 listaDeExpresionesInvocacion: expresion

   89 $@10: /* vacío */

   90 listaDeExpresionesInvocacion: expresion $@10 ',' listaDeExpresionesInvocacion
   91                             | error

   92 listaDeExpresiones: expresion
   93                   | expresion ',' listaDeExpresiones
   94                   | error

   95 expresion: constante
   96          | LITERALCADENA
   97          | ID
   98          | expresionDeAsignacion
   99          | expresion '+' expresion
  100          | expresion '-' expresion
  101          | expresion '*' expresion
  102          | expresion '/' expresion
  103          | expresionUnaria
  104          | expresion '^' expresion
  105          | '(' expresion ')'
  106          | opPreDecremento
  107          | opPreIncremento
  108          | opPostDecremento
  109          | opPostIncremento
  110          | expresion YLOGICO expresion
  111          | expresion OLOGICO expresion
  112          | expresion '<' expresion
  113          | expresion '>' expresion
  114          | expresion MENORIGUAL expresion
  115          | expresion MAYORIGUAL expresion
  116          | invocacionFuncion
  117          | error

  118 opPostDecremento: expresion OP_DECREMENTO

  119 opPreDecremento: OP_DECREMENTO ID

  120 opPostIncremento: ID OP_INCREMENTO

  121 opPreIncremento: OP_INCREMENTO ID

  122 expresionUnaria: '-' expresion


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 22 23 24 32 33 34 48 78 105
')' (41) 22 23 24 32 33 34 48 78 105
'*' (42) 101
'+' (43) 99
',' (44) 44 54 59 90 93
'-' (45) 100 122
'/' (47) 102
':' (58) 26 27
';' (59) 14 15 16 29 32 34 42 50 55 72
'<' (60) 112
'=' (61) 38 83 86
'>' (62) 113
'^' (94) 104
'{' (123) 62
'}' (125) 62
error (256) 3 21 25 28 35 46 49 52 56 61 63 67 73 76 82 87 91 94 117
CCHAR (258) 31
NUM (259) 4
LITERALCADENA (260) 96
ID (261) 38 48 59 60 75 81 85 86 97 119 120 121
TIPO_DATO (262) 18 38 59 60
REAL (263) 5
TOKEN_VOID (264) 20
FOR (265) 32
IF (266) 22 23
WHILE (267) 33 34
DO (268) 34
CASE (269) 26
DEFAULT (270) 27
SWITCH (271) 24
ELSE (272) 23
RETURN (273) 29
BREAK (274) 15
CONTINUE (275) 16
OP_DECREMENTO (276) 118 119
OP_INCREMENTO (277) 120 121
MAYORIGUAL (278) 115
MENORIGUAL (279) 114
NOIGUAL (280)
IGUALIGUAL (281)
YLOGICO (282) 110
OLOGICO (283) 111
DIVIDIDOIGUAL (284) 71
PORIGUAL (285) 70
MENOSIGUAL (286) 68
MASIGUAL (287) 69


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
input (49)
    en la izquierda: 1 2 3, en la derecha: 0 2 3
numero (50)
    en la izquierda: 4 5, en la derecha: 30
sentencia (51)
    en la izquierda: 6 7 8 9 10 11 12 13 14, en la derecha: 2 22 23
    24 26 27 32 33 34 64 65
sentenciaSalto (52)
    en la izquierda: 15 16, en la derecha: 13
sentenciaDeclaracion (53)
    en la izquierda: 18 20 21, en la derecha: 6
$@1 (54)
    en la izquierda: 17, en la derecha: 18
$@2 (55)
    en la izquierda: 19, en la derecha: 20
sentenciaSeleccion (56)
    en la izquierda: 22 23 24 25, en la derecha: 11
sentenciaEtiquetada (57)
    en la izquierda: 26 27 28, en la derecha: 10
sentenciaRetorno (58)
    en la izquierda: 29, en la derecha: 12
constante (59)
    en la izquierda: 30 31, en la derecha: 26 95
sentenciaIteracion (60)
    en la izquierda: 32 33 34 35, en la derecha: 9
primeraExpresionFor (61)
    en la izquierda: 36 38 39, en la derecha: 32
$@3 (62)
    en la izquierda: 37, en la derecha: 38
expresionOpcional (63)
    en la izquierda: 40 41, en la derecha: 32
parteFinalDeclaracion (64)
    en la izquierda: 42 44 45 46, en la derecha: 18
$@4 (65)
    en la izquierda: 43, en la derecha: 44
sentenciaFuncion (66)
    en la izquierda: 48 49, en la derecha: 20 45
$@5 (67)
    en la izquierda: 47, en la derecha: 48
declaracionODefFuncion (68)
    en la izquierda: 50 51 52, en la derecha: 48
listaIdentificadores (69)
    en la izquierda: 54 55 56, en la derecha: 44 54
$@6 (70)
    en la izquierda: 53, en la derecha: 54
listaDeParametros (71)
    en la izquierda: 57 59 60 61, en la derecha: 48 59
$@7 (72)
    en la izquierda: 58, en la derecha: 59
sentenciaCompuesta (73)
    en la izquierda: 62 63, en la derecha: 7 51
listaDeSentencias (74)
    en la izquierda: 64 65 66 67, en la derecha: 62 64
opAsignacion (75)
    en la izquierda: 68 69 70 71, en la derecha: 84
sentenciaExpresion (76)
    en la izquierda: 72 73, en la derecha: 8
invocacionFuncion (77)
    en la izquierda: 75 76, en la derecha: 116
$@8 (78)
    en la izquierda: 74, en la derecha: 75
segundaParteInvocacion (79)
    en la izquierda: 78, en la derecha: 75
$@9 (80)
    en la izquierda: 77, en la derecha: 78
conOSinParametros (81)
    en la izquierda: 79 80, en la derecha: 78
expresionDeAsignacion (82)
    en la izquierda: 81 82, en la derecha: 98
opAsignacionGeneral (83)
    en la izquierda: 83 84, en la derecha: 81
declaraId (84)
    en la izquierda: 85 86 87, en la derecha: 42 44 54 55
listaDeExpresionesInvocacion (85)
    en la izquierda: 88 90 91, en la derecha: 79 90
$@10 (86)
    en la izquierda: 89, en la derecha: 90
listaDeExpresiones (87)
    en la izquierda: 92 93 94, en la derecha: 72 81 93
expresion (88)
    en la izquierda: 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 109 110 111 112 113 114 115 116 117, en la derecha: 22 23 24
    29 33 34 36 38 40 86 88 90 92 93 99 100 101 102 104 105 110 111
    112 113 114 115 118 122
opPostDecremento (89)
    en la izquierda: 118, en la derecha: 108
opPreDecremento (90)
    en la izquierda: 119, en la derecha: 106
opPostIncremento (91)
    en la izquierda: 120, en la derecha: 109
opPreIncremento (92)
    en la izquierda: 121, en la derecha: 107
expresionUnaria (93)
    en la izquierda: 122, en la derecha: 103


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . sentencia
    3      | input . error

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    CCHAR          desplazar e ir al estado 4
    NUM            desplazar e ir al estado 5
    LITERALCADENA  desplazar e ir al estado 6
    ID             desplazar e ir al estado 7
    TIPO_DATO      desplazar e ir al estado 8
    REAL           desplazar e ir al estado 9
    TOKEN_VOID     desplazar e ir al estado 10
    FOR            desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    WHILE          desplazar e ir al estado 13
    DO             desplazar e ir al estado 14
    CASE           desplazar e ir al estado 15
    DEFAULT        desplazar e ir al estado 16
    SWITCH         desplazar e ir al estado 17
    RETURN         desplazar e ir al estado 18
    BREAK          desplazar e ir al estado 19
    CONTINUE       desplazar e ir al estado 20
    OP_DECREMENTO  desplazar e ir al estado 21
    OP_INCREMENTO  desplazar e ir al estado 22
    '-'            desplazar e ir al estado 23
    ';'            desplazar e ir al estado 24
    '('            desplazar e ir al estado 25
    '{'            desplazar e ir al estado 26

    numero                 ir al estado 27
    sentencia              ir al estado 28
    sentenciaSalto         ir al estado 29
    sentenciaDeclaracion   ir al estado 30
    sentenciaSeleccion     ir al estado 31
    sentenciaEtiquetada    ir al estado 32
    sentenciaRetorno       ir al estado 33
    constante              ir al estado 34
    sentenciaIteracion     ir al estado 35
    sentenciaCompuesta     ir al estado 36
    sentenciaExpresion     ir al estado 37
    invocacionFuncion      ir al estado 38
    expresionDeAsignacion  ir al estado 39
    listaDeExpresiones     ir al estado 40
    expresion              ir al estado 41
    opPostDecremento       ir al estado 42
    opPreDecremento        ir al estado 43
    opPostIncremento       ir al estado 44
    opPreIncremento        ir al estado 45
    expresionUnaria        ir al estado 46


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    3 input: input error .
   21 sentenciaDeclaracion: error .
   25 sentenciaSeleccion: error .
   28 sentenciaEtiquetada: error .
   35 sentenciaIteracion: error .
   63 sentenciaCompuesta: error .
   73 sentenciaExpresion: error .
   76 invocacionFuncion: error .
   82 expresionDeAsignacion: error .
   94 listaDeExpresiones: error .
  117 expresion: error .

    $end           reduce usando la regla 3 (input)
    $end           [reduce usando la regla 21 (sentenciaDeclaracion)]
    $end           [reduce usando la regla 25 (sentenciaSeleccion)]
    $end           [reduce usando la regla 28 (sentenciaEtiquetada)]
    $end           [reduce usando la regla 35 (sentenciaIteracion)]
    $end           [reduce usando la regla 63 (sentenciaCompuesta)]
    $end           [reduce usando la regla 73 (sentenciaExpresion)]
    error          reduce usando la regla 3 (input)
    error          [reduce usando la regla 21 (sentenciaDeclaracion)]
    error          [reduce usando la regla 25 (sentenciaSeleccion)]
    error          [reduce usando la regla 28 (sentenciaEtiquetada)]
    error          [reduce usando la regla 35 (sentenciaIteracion)]
    error          [reduce usando la regla 63 (sentenciaCompuesta)]
    error          [reduce usando la regla 73 (sentenciaExpresion)]
    CCHAR          reduce usando la regla 3 (input)
    CCHAR          [reduce usando la regla 21 (sentenciaDeclaracion)]
    CCHAR          [reduce usando la regla 25 (sentenciaSeleccion)]
    CCHAR          [reduce usando la regla 28 (sentenciaEtiquetada)]
    CCHAR          [reduce usando la regla 35 (sentenciaIteracion)]
    CCHAR          [reduce usando la regla 63 (sentenciaCompuesta)]
    CCHAR          [reduce usando la regla 73 (sentenciaExpresion)]
    NUM            reduce usando la regla 3 (input)
    NUM            [reduce usando la regla 21 (sentenciaDeclaracion)]
    NUM            [reduce usando la regla 25 (sentenciaSeleccion)]
    NUM            [reduce usando la regla 28 (sentenciaEtiquetada)]
    NUM            [reduce usando la regla 35 (sentenciaIteracion)]
    NUM            [reduce usando la regla 63 (sentenciaCompuesta)]
    NUM            [reduce usando la regla 73 (sentenciaExpresion)]
    LITERALCADENA  reduce usando la regla 3 (input)
    LITERALCADENA  [reduce usando la regla 21 (sentenciaDeclaracion)]
    LITERALCADENA  [reduce usando la regla 25 (sentenciaSeleccion)]
    LITERALCADENA  [reduce usando la regla 28 (sentenciaEtiquetada)]
    LITERALCADENA  [reduce usando la regla 35 (sentenciaIteracion)]
    LITERALCADENA  [reduce usando la regla 63 (sentenciaCompuesta)]
    LITERALCADENA  [reduce usando la regla 73 (sentenciaExpresion)]
    ID             reduce usando la regla 3 (input)
    ID             [reduce usando la regla 21 (sentenciaDeclaracion)]
    ID             [reduce usando la regla 25 (sentenciaSeleccion)]
    ID             [reduce usando la regla 28 (sentenciaEtiquetada)]
    ID             [reduce usando la regla 35 (sentenciaIteracion)]
    ID             [reduce usando la regla 63 (sentenciaCompuesta)]
    ID             [reduce usando la regla 73 (sentenciaExpresion)]
    TIPO_DATO      reduce usando la regla 3 (input)
    TIPO_DATO      [reduce usando la regla 21 (sentenciaDeclaracion)]
    TIPO_DATO      [reduce usando la regla 25 (sentenciaSeleccion)]
    TIPO_DATO      [reduce usando la regla 28 (sentenciaEtiquetada)]
    TIPO_DATO      [reduce usando la regla 35 (sentenciaIteracion)]
    TIPO_DATO      [reduce usando la regla 63 (sentenciaCompuesta)]
    TIPO_DATO      [reduce usando la regla 73 (sentenciaExpresion)]
    REAL           reduce usando la regla 3 (input)
    REAL           [reduce usando la regla 21 (sentenciaDeclaracion)]
    REAL           [reduce usando la regla 25 (sentenciaSeleccion)]
    REAL           [reduce usando la regla 28 (sentenciaEtiquetada)]
    REAL           [reduce usando la regla 35 (sentenciaIteracion)]
    REAL           [reduce usando la regla 63 (sentenciaCompuesta)]
    REAL           [reduce usando la regla 73 (sentenciaExpresion)]
    TOKEN_VOID     reduce usando la regla 3 (input)
    TOKEN_VOID     [reduce usando la regla 21 (sentenciaDeclaracion)]
    TOKEN_VOID     [reduce usando la regla 25 (sentenciaSeleccion)]
    TOKEN_VOID     [reduce usando la regla 28 (sentenciaEtiquetada)]
    TOKEN_VOID     [reduce usando la regla 35 (sentenciaIteracion)]
    TOKEN_VOID     [reduce usando la regla 63 (sentenciaCompuesta)]
    TOKEN_VOID     [reduce usando la regla 73 (sentenciaExpresion)]
    FOR            reduce usando la regla 3 (input)
    FOR            [reduce usando la regla 21 (sentenciaDeclaracion)]
    FOR            [reduce usando la regla 25 (sentenciaSeleccion)]
    FOR            [reduce usando la regla 28 (sentenciaEtiquetada)]
    FOR            [reduce usando la regla 35 (sentenciaIteracion)]
    FOR            [reduce usando la regla 63 (sentenciaCompuesta)]
    FOR            [reduce usando la regla 73 (sentenciaExpresion)]
    IF             reduce usando la regla 3 (input)
    IF             [reduce usando la regla 21 (sentenciaDeclaracion)]
    IF             [reduce usando la regla 25 (sentenciaSeleccion)]
    IF             [reduce usando la regla 28 (sentenciaEtiquetada)]
    IF             [reduce usando la regla 35 (sentenciaIteracion)]
    IF             [reduce usando la regla 63 (sentenciaCompuesta)]
    IF             [reduce usando la regla 73 (sentenciaExpresion)]
    WHILE          reduce usando la regla 3 (input)
    WHILE          [reduce usando la regla 21 (sentenciaDeclaracion)]
    WHILE          [reduce usando la regla 25 (sentenciaSeleccion)]
    WHILE          [reduce usando la regla 28 (sentenciaEtiquetada)]
    WHILE          [reduce usando la regla 35 (sentenciaIteracion)]
    WHILE          [reduce usando la regla 63 (sentenciaCompuesta)]
    WHILE          [reduce usando la regla 73 (sentenciaExpresion)]
    DO             reduce usando la regla 3 (input)
    DO             [reduce usando la regla 21 (sentenciaDeclaracion)]
    DO             [reduce usando la regla 25 (sentenciaSeleccion)]
    DO             [reduce usando la regla 28 (sentenciaEtiquetada)]
    DO             [reduce usando la regla 35 (sentenciaIteracion)]
    DO             [reduce usando la regla 63 (sentenciaCompuesta)]
    DO             [reduce usando la regla 73 (sentenciaExpresion)]
    CASE           reduce usando la regla 3 (input)
    CASE           [reduce usando la regla 21 (sentenciaDeclaracion)]
    CASE           [reduce usando la regla 25 (sentenciaSeleccion)]
    CASE           [reduce usando la regla 28 (sentenciaEtiquetada)]
    CASE           [reduce usando la regla 35 (sentenciaIteracion)]
    CASE           [reduce usando la regla 63 (sentenciaCompuesta)]
    CASE           [reduce usando la regla 73 (sentenciaExpresion)]
    DEFAULT        reduce usando la regla 3 (input)
    DEFAULT        [reduce usando la regla 21 (sentenciaDeclaracion)]
    DEFAULT        [reduce usando la regla 25 (sentenciaSeleccion)]
    DEFAULT        [reduce usando la regla 28 (sentenciaEtiquetada)]
    DEFAULT        [reduce usando la regla 35 (sentenciaIteracion)]
    DEFAULT        [reduce usando la regla 63 (sentenciaCompuesta)]
    DEFAULT        [reduce usando la regla 73 (sentenciaExpresion)]
    SWITCH         reduce usando la regla 3 (input)
    SWITCH         [reduce usando la regla 21 (sentenciaDeclaracion)]
    SWITCH         [reduce usando la regla 25 (sentenciaSeleccion)]
    SWITCH         [reduce usando la regla 28 (sentenciaEtiquetada)]
    SWITCH         [reduce usando la regla 35 (sentenciaIteracion)]
    SWITCH         [reduce usando la regla 63 (sentenciaCompuesta)]
    SWITCH         [reduce usando la regla 73 (sentenciaExpresion)]
    RETURN         reduce usando la regla 3 (input)
    RETURN         [reduce usando la regla 21 (sentenciaDeclaracion)]
    RETURN         [reduce usando la regla 25 (sentenciaSeleccion)]
    RETURN         [reduce usando la regla 28 (sentenciaEtiquetada)]
    RETURN         [reduce usando la regla 35 (sentenciaIteracion)]
    RETURN         [reduce usando la regla 63 (sentenciaCompuesta)]
    RETURN         [reduce usando la regla 73 (sentenciaExpresion)]
    BREAK          reduce usando la regla 3 (input)
    BREAK          [reduce usando la regla 21 (sentenciaDeclaracion)]
    BREAK          [reduce usando la regla 25 (sentenciaSeleccion)]
    BREAK          [reduce usando la regla 28 (sentenciaEtiquetada)]
    BREAK          [reduce usando la regla 35 (sentenciaIteracion)]
    BREAK          [reduce usando la regla 63 (sentenciaCompuesta)]
    BREAK          [reduce usando la regla 73 (sentenciaExpresion)]
    CONTINUE       reduce usando la regla 3 (input)
    CONTINUE       [reduce usando la regla 21 (sentenciaDeclaracion)]
    CONTINUE       [reduce usando la regla 25 (sentenciaSeleccion)]
    CONTINUE       [reduce usando la regla 28 (sentenciaEtiquetada)]
    CONTINUE       [reduce usando la regla 35 (sentenciaIteracion)]
    CONTINUE       [reduce usando la regla 63 (sentenciaCompuesta)]
    CONTINUE       [reduce usando la regla 73 (sentenciaExpresion)]
    OP_DECREMENTO  reduce usando la regla 3 (input)
    OP_DECREMENTO  [reduce usando la regla 21 (sentenciaDeclaracion)]
    OP_DECREMENTO  [reduce usando la regla 25 (sentenciaSeleccion)]
    OP_DECREMENTO  [reduce usando la regla 28 (sentenciaEtiquetada)]
    OP_DECREMENTO  [reduce usando la regla 35 (sentenciaIteracion)]
    OP_DECREMENTO  [reduce usando la regla 63 (sentenciaCompuesta)]
    OP_DECREMENTO  [reduce usando la regla 73 (sentenciaExpresion)]
    OP_DECREMENTO  [reduce usando la regla 76 (invocacionFuncion)]
    OP_DECREMENTO  [reduce usando la regla 82 (expresionDeAsignacion)]
    OP_DECREMENTO  [reduce usando la regla 117 (expresion)]
    OP_INCREMENTO  reduce usando la regla 3 (input)
    OP_INCREMENTO  [reduce usando la regla 21 (sentenciaDeclaracion)]
    OP_INCREMENTO  [reduce usando la regla 25 (sentenciaSeleccion)]
    OP_INCREMENTO  [reduce usando la regla 28 (sentenciaEtiquetada)]
    OP_INCREMENTO  [reduce usando la regla 35 (sentenciaIteracion)]
    OP_INCREMENTO  [reduce usando la regla 63 (sentenciaCompuesta)]
    OP_INCREMENTO  [reduce usando la regla 73 (sentenciaExpresion)]
    '+'            reduce usando la regla 76 (invocacionFuncion)
    '+'            [reduce usando la regla 82 (expresionDeAsignacion)]
    '+'            [reduce usando la regla 117 (expresion)]
    '-'            reduce usando la regla 3 (input)
    '-'            [reduce usando la regla 21 (sentenciaDeclaracion)]
    '-'            [reduce usando la regla 25 (sentenciaSeleccion)]
    '-'            [reduce usando la regla 28 (sentenciaEtiquetada)]
    '-'            [reduce usando la regla 35 (sentenciaIteracion)]
    '-'            [reduce usando la regla 63 (sentenciaCompuesta)]
    '-'            [reduce usando la regla 73 (sentenciaExpresion)]
    '-'            [reduce usando la regla 76 (invocacionFuncion)]
    '-'            [reduce usando la regla 82 (expresionDeAsignacion)]
    '-'            [reduce usando la regla 117 (expresion)]
    '*'            reduce usando la regla 76 (invocacionFuncion)
    '*'            [reduce usando la regla 82 (expresionDeAsignacion)]
    '*'            [reduce usando la regla 117 (expresion)]
    '/'            reduce usando la regla 76 (invocacionFuncion)
    '/'            [reduce usando la regla 82 (expresionDeAsignacion)]
    '/'            [reduce usando la regla 117 (expresion)]
    '^'            reduce usando la regla 76 (invocacionFuncion)
    '^'            [reduce usando la regla 82 (expresionDeAsignacion)]
    '^'            [reduce usando la regla 117 (expresion)]
    '<'            reduce usando la regla 76 (invocacionFuncion)
    '<'            [reduce usando la regla 82 (expresionDeAsignacion)]
    '<'            [reduce usando la regla 117 (expresion)]
    '>'            reduce usando la regla 76 (invocacionFuncion)
    '>'            [reduce usando la regla 82 (expresionDeAsignacion)]
    '>'            [reduce usando la regla 117 (expresion)]
    MAYORIGUAL     reduce usando la regla 76 (invocacionFuncion)
    MAYORIGUAL     [reduce usando la regla 82 (expresionDeAsignacion)]
    MAYORIGUAL     [reduce usando la regla 117 (expresion)]
    MENORIGUAL     reduce usando la regla 76 (invocacionFuncion)
    MENORIGUAL     [reduce usando la regla 82 (expresionDeAsignacion)]
    MENORIGUAL     [reduce usando la regla 117 (expresion)]
    YLOGICO        reduce usando la regla 76 (invocacionFuncion)
    YLOGICO        [reduce usando la regla 82 (expresionDeAsignacion)]
    YLOGICO        [reduce usando la regla 117 (expresion)]
    OLOGICO        reduce usando la regla 76 (invocacionFuncion)
    OLOGICO        [reduce usando la regla 82 (expresionDeAsignacion)]
    OLOGICO        [reduce usando la regla 117 (expresion)]
    ','            reduce usando la regla 76 (invocacionFuncion)
    ','            [reduce usando la regla 82 (expresionDeAsignacion)]
    ','            [reduce usando la regla 117 (expresion)]
    ';'            reduce usando la regla 3 (input)
    ';'            [reduce usando la regla 21 (sentenciaDeclaracion)]
    ';'            [reduce usando la regla 25 (sentenciaSeleccion)]
    ';'            [reduce usando la regla 28 (sentenciaEtiquetada)]
    ';'            [reduce usando la regla 35 (sentenciaIteracion)]
    ';'            [reduce usando la regla 63 (sentenciaCompuesta)]
    ';'            [reduce usando la regla 73 (sentenciaExpresion)]
    ';'            [reduce usando la regla 76 (invocacionFuncion)]
    ';'            [reduce usando la regla 82 (expresionDeAsignacion)]
    ';'            [reduce usando la regla 94 (listaDeExpresiones)]
    ';'            [reduce usando la regla 117 (expresion)]
    '('            reduce usando la regla 3 (input)
    '('            [reduce usando la regla 21 (sentenciaDeclaracion)]
    '('            [reduce usando la regla 25 (sentenciaSeleccion)]
    '('            [reduce usando la regla 28 (sentenciaEtiquetada)]
    '('            [reduce usando la regla 35 (sentenciaIteracion)]
    '('            [reduce usando la regla 63 (sentenciaCompuesta)]
    '('            [reduce usando la regla 73 (sentenciaExpresion)]
    '{'            reduce usando la regla 3 (input)
    '{'            [reduce usando la regla 21 (sentenciaDeclaracion)]
    '{'            [reduce usando la regla 25 (sentenciaSeleccion)]
    '{'            [reduce usando la regla 28 (sentenciaEtiquetada)]
    '{'            [reduce usando la regla 35 (sentenciaIteracion)]
    '{'            [reduce usando la regla 63 (sentenciaCompuesta)]
    '{'            [reduce usando la regla 73 (sentenciaExpresion)]
    $default       reduce usando la regla 3 (input)


estado 4

   31 constante: CCHAR .

    $default  reduce usando la regla 31 (constante)


estado 5

    4 numero: NUM .

    $default  reduce usando la regla 4 (numero)


estado 6

   96 expresion: LITERALCADENA .

    $default  reduce usando la regla 96 (expresion)


estado 7

   75 invocacionFuncion: ID . $@8 segundaParteInvocacion
   81 expresionDeAsignacion: ID . opAsignacionGeneral listaDeExpresiones
   97 expresion: ID .
  120 opPostIncremento: ID . OP_INCREMENTO

    OP_INCREMENTO  desplazar e ir al estado 47
    '='            desplazar e ir al estado 48
    DIVIDIDOIGUAL  desplazar e ir al estado 49
    PORIGUAL       desplazar e ir al estado 50
    MENOSIGUAL     desplazar e ir al estado 51
    MASIGUAL       desplazar e ir al estado 52

    '('       reduce usando la regla 74 ($@8)
    $default  reduce usando la regla 97 (expresion)

    opAsignacion         ir al estado 53
    $@8                  ir al estado 54
    opAsignacionGeneral  ir al estado 55


estado 8

   18 sentenciaDeclaracion: TIPO_DATO . $@1 parteFinalDeclaracion

    $default  reduce usando la regla 17 ($@1)

    $@1  ir al estado 56


estado 9

    5 numero: REAL .

    $default  reduce usando la regla 5 (numero)


estado 10

   20 sentenciaDeclaracion: TOKEN_VOID . $@2 sentenciaFuncion

    $default  reduce usando la regla 19 ($@2)

    $@2  ir al estado 57


estado 11

   32 sentenciaIteracion: FOR . '(' primeraExpresionFor ';' expresionOpcional ';' expresionOpcional ')' sentencia

    '('  desplazar e ir al estado 58


estado 12

   22 sentenciaSeleccion: IF . '(' expresion ')' sentencia
   23                   | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 59


estado 13

   33 sentenciaIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 60


estado 14

   34 sentenciaIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    error          desplazar e ir al estado 61
    CCHAR          desplazar e ir al estado 4
    NUM            desplazar e ir al estado 5
    LITERALCADENA  desplazar e ir al estado 6
    ID             desplazar e ir al estado 7
    TIPO_DATO      desplazar e ir al estado 8
    REAL           desplazar e ir al estado 9
    TOKEN_VOID     desplazar e ir al estado 10
    FOR            desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    WHILE          desplazar e ir al estado 13
    DO             desplazar e ir al estado 14
    CASE           desplazar e ir al estado 15
    DEFAULT        desplazar e ir al estado 16
    SWITCH         desplazar e ir al estado 17
    RETURN         desplazar e ir al estado 18
    BREAK          desplazar e ir al estado 19
    CONTINUE       desplazar e ir al estado 20
    OP_DECREMENTO  desplazar e ir al estado 21
    OP_INCREMENTO  desplazar e ir al estado 22
    '-'            desplazar e ir al estado 23
    ';'            desplazar e ir al estado 24
    '('            desplazar e ir al estado 25
    '{'            desplazar e ir al estado 26

    numero                 ir al estado 27
    sentencia              ir al estado 62
    sentenciaSalto         ir al estado 29
    sentenciaDeclaracion   ir al estado 30
    sentenciaSeleccion     ir al estado 31
    sentenciaEtiquetada    ir al estado 32
    sentenciaRetorno       ir al estado 33
    constante              ir al estado 34
    sentenciaIteracion     ir al estado 35
    sentenciaCompuesta     ir al estado 36
    sentenciaExpresion     ir al estado 37
    invocacionFuncion      ir al estado 38
    expresionDeAsignacion  ir al estado 39
    listaDeExpresiones     ir al estado 40
    expresion              ir al estado 41
    opPostDecremento       ir al estado 42
    opPreDecremento        ir al estado 43
    opPostIncremento       ir al estado 44
    opPreIncremento        ir al estado 45
    expresionUnaria        ir al estado 46


estado 15

   26 sentenciaEtiquetada: CASE . constante ':' sentencia

    CCHAR  desplazar e ir al estado 4
    NUM    desplazar e ir al estado 5
    REAL   desplazar e ir al estado 9

    numero     ir al estado 27
    constante  ir al estado 63


estado 16

   27 sentenciaEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 64


estado 17

   24 sentenciaSeleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 65


estado 18

   29 sentenciaRetorno: RETURN . expresion ';'

    error          desplazar e ir al estado 66
    CCHAR          desplazar e ir al estado 4
    NUM            desplazar e ir al estado 5
    LITERALCADENA  desplazar e ir al estado 6
    ID             desplazar e ir al estado 7
    REAL           desplazar e ir al estado 9
    OP_DECREMENTO  desplazar e ir al estado 21
    OP_INCREMENTO  desplazar e ir al estado 22
    '-'            desplazar e ir al estado 23
    '('            desplazar e ir al estado 25
